@@ -2,4 +2,10 @@ name = PHPMailer
 description = Integrates the PHPMailer library for SMTP e-mail delivery.
 dependencies[] = libraries
 package = Mail
-core = 6.x
+core = 7.x
+configure = admin/config/system/phpmailer
+files[] = includes/phpmailer.class.inc
+files[] = tests/phpmailer.test
+; Libraries
+;files[] = class.phpmailer.php
+;files[] = class.smtp.php
