@@ -13,7 +13,7 @@ function phpmailer_requirements($phase) {
   // Ensure translations don't break at install time.
   $t = get_t();
 
-  if ($phase == 'runtime' && phpmailer_load_library()) {
+  if ($phase == 'runtime' && phpmailer_library_exists()) {
     $mail = new PHPMailer();
     $requirements['phpmailer'] = array(
       'title' => $t('PHPMailer library'),
@@ -24,7 +24,9 @@ function phpmailer_requirements($phase) {
   else {
     drupal_load('module', 'libraries');
     $path = libraries_get_path('phpmailer');
-    if (!file_exists('./' . $path . '/class.phpmailer.php') || !file_exists('./' . $path . '/class.smtp.php')) {
+    if (!$path || !file_exists(DRUPAL_ROOT . '/' . $path . '/class.phpmailer.php') || !file_exists(DRUPAL_ROOT . '/' . $path . '/class.smtp.php')) {
+      // Since Libraries 2.x, $path is FALSE if the library does not exist.
+      $path = 'sites/all/libraries/phpmailer';
       $requirements['phpmailer'] = array(
         'title' => $t('PHPMailer library'),
         'value' => $t('Missing'),
@@ -45,6 +47,10 @@ function phpmailer_requirements($phase) {
  * Implementation of hook_uninstall().
  */
 function phpmailer_uninstall() {
+  $mail_system = variable_get('mail_system', array('default-system' => 'DefaultMailSystem'));
+  $mail_system['default-system'] = 'DefaultMailSystem';
+  variable_set('mail_system', $mail_system);
+
   variable_del('smtp_on');
   variable_del('smtp_host');
   variable_del('smtp_hostbackup');
@@ -57,3 +63,17 @@ function phpmailer_uninstall() {
   variable_del('smtp_debug');
 }
 
+/**
+ * Enable PHPMailer as default mail system if it has been before.
+ */
+function phpmailer_update_7000() {
+  // @todo Check whether the library exists?
+  if (strpos(variable_get('smtp_library', ''), 'phpmailer')) {
+    $mail_system = variable_get('mail_system', array('default-system' => 'DefaultMailSystem'));
+    $mail_system['default-system'] = 'DrupalPHPMailer';
+    variable_set('mail_system', $mail_system);
+    // PHPMailer was the default mail engine, so it should be safe to remove the
+    // variable.
+    variable_del('smtp_library');
+  }
+}
