@@ -8,15 +8,20 @@
 /**
  * Implementation of hook_perm().
  */
-function phpmailer_perm() {
-  return array('administer phpmailer settings');
+function phpmailer_permission() {
+  return array(
+    'administer phpmailer settings' => array(
+      'title' => t('Administer PHPMailer settings'),
+      'restrict access' => TRUE,
+    ),
+  );
 }
 
 /**
  * Implementation of hook_menu().
  */
 function phpmailer_menu() {
-  $items['admin/settings/phpmailer'] = array(
+  $items['admin/config/system/phpmailer'] = array(
     'title' => 'PHPMailer',
     'description' => 'Configure PHPMailer settings.',
     'page callback' => 'drupal_get_form',
@@ -45,7 +50,7 @@ function phpmailer_form_mimemail_admin_settings_alter(&$form, &$form_state) {
     $mimemail_alter = &$form['mimemail']['mimemail_alter'];
     $mimemail_alter['#disabled'] = TRUE;
     $mimemail_alter['#default_value'] = 0;
-    $mimemail_alter['#description'] = t('PHPMailer has been set to deliver all site messages. To let Mime Mail apply styles and formatting to system e-mails but still use PHPMailer for mail transport, uncheck <em>Use PHPMailer to send e-mails</em> first on the <a href="@url">PHPMailer settings page</a>. Then activate this setting and choose PHPMailer from the list of e-mail engines below.', array('@url' => url('admin/settings/phpmailer')));
+    $mimemail_alter['#description'] = t('PHPMailer has been set to deliver all site messages. To let Mime Mail apply styles and formatting to system e-mails but still use PHPMailer for mail transport, uncheck <em>Use PHPMailer to send e-mails</em> first on the <a href="@url">PHPMailer settings page</a>. Then activate this setting and choose PHPMailer from the list of e-mail engines below.', array('@url' => url('admin/config/system/phpmailer')));
   }
   // @todo Move to MimeMail project.
   $form['preview'] = array(
@@ -60,23 +65,19 @@ function phpmailer_form_mimemail_admin_settings_alter(&$form, &$form_state) {
  * Determine if PHPMailer is used to deliver e-mails.
  */
 function phpmailer_enabled() {
-  return strpos(variable_get('smtp_library', ''), 'phpmailer');
-}
-
-if (phpmailer_enabled() && !function_exists('drupal_mail_wrapper')) {
-  /**
-   * Implementation of drupal_mail_wrapper().
-   */
-  function drupal_mail_wrapper($message) {
-    module_load_include('inc', 'phpmailer', 'includes/phpmailer.drupal');
-    return phpmailer_send($message);
-  }
+  // We need to rely on our 'smtp_on' variable, since PHPMailer may not be
+  // configured as the default mail system.
+  return (bool) variable_get('smtp_on', 0);
 }
 
 /**
  * Implementation of hook_mailengine().
  */
 function phpmailer_mailengine($op, $message = array()) {
+  if (!phpmailer_library_exists()) {
+    return;
+  }
+
   switch ($op) {
     case 'name':
       return t('PHPMailer');
@@ -85,7 +86,7 @@ function phpmailer_mailengine($op, $message = array()) {
       return t('Mailing engine using the PHPMailer library.');
 
     case 'settings':
-      $form['info']['#value'] = t('To configure your mail server settings, visit the <a href="@url">PHPMailer settings page</a>.', array('@url' => url('admin/settings/phpmailer')));
+      $form['info']['#value'] = t('To configure your mail server settings, visit the <a href="@url">PHPMailer settings page</a>.', array('@url' => url('admin/config/system/phpmailer')));
       return $form;
 
     case 'multiple':
@@ -174,7 +175,7 @@ function phpmailer_preview_access() {
 function phpmailer_enable() {
   if (!phpmailer_enabled() && !(module_exists('mimemail') && variable_get('mimemail_engine', 'mimemail') == 'phpmailer')) {
     $t = get_t();
-    drupal_set_message($t('PHPMailer has been installed, but is currently disabled. <a href="@settings-url">Configure it now</a>.', array('@settings-url' => url('admin/settings/phpmailer'))));
+    drupal_set_message($t('PHPMailer has been installed, but is currently disabled. <a href="@settings-url">Configure it now</a>.', array('@settings-url' => url('admin/config/system/phpmailer'))));
   }
 }
 
@@ -183,7 +184,20 @@ function phpmailer_enable() {
  */
 function phpmailer_disable() {
   if (phpmailer_enabled()) {
-    variable_del('smtp_library');
+    // Remove PHPMailer from all mail keys it is configured for.
+    $mail_system = variable_get('mail_system', array('default-system' => 'DefaultMailSystem'));
+    foreach ($mail_system as $key => $class) {
+      if ($class == 'DrupalPHPMailer') {
+        if ($key != 'default-system') {
+          unset($mail_system[$key]);
+        }
+        else {
+          $mail_system[$key] = 'DefaultMailSystem';
+        }
+      }
+    }
+    variable_set('mail_system', $mail_system);
+
     variable_del('smtp_on');
     drupal_set_message(t('PHPMailer has been disabled.'));
   }
@@ -194,34 +208,33 @@ function phpmailer_disable() {
 }
 
 /**
- * Load PHPMailer class from libraries path.
+ * Implements hook_registry_files_alter().
+ *
+ * @todo Consider to move this into Libraries API.
  */
-function phpmailer_load_library() {
-  if (!class_exists('PHPMailer')) {
-    if (!($library_path = phpmailer_get_path())) {
-      watchdog('phpmailer', 'Could not load PHPMailer library.', array(), WATCHDOG_ERROR);
-      return FALSE;
-    }
-    require_once './'. $library_path .'/class.phpmailer.php';
+function phpmailer_registry_files_alter(&$files, $modules) {
+  $library_path = libraries_get_path('phpmailer');
+  if (!$library_path) {
+    return;
   }
-  if (!class_exists('DrupalPHPMailer')) {
-    module_load_include('inc', 'phpmailer', 'includes/phpmailer.class');
+  foreach (array('class.phpmailer.php', 'class.pop3.php', 'class.smtp.php') as $filename) {
+    $files[$library_path . '/' . $filename] = array(
+      'module' => 'phpmailer',
+      'weight' => 0,
+    );
   }
-  return TRUE;
 }
 
 /**
- * Get path to PHPMailer library.
+ * Returns whether PHPMailer library files exist.
  */
-function phpmailer_get_path() {
+function phpmailer_library_exists() {
+  $exists = FALSE;
   $library_path = libraries_get_path('phpmailer');
-  if (!file_exists('./'. $library_path .'/class.phpmailer.php')) {
-    // Provide backwards compatibility for existing installations of
-    // PHPMailer module.
-    $library_path = drupal_get_path('module', 'phpmailer') .'/phpmailer';
-    if (!file_exists('./'. $library_path .'/class.phpmailer.php')) {
-      return FALSE;
+  if ($library_path) {
+    foreach (array('class.phpmailer.php', 'class.pop3.php', 'class.smtp.php') as $filename) {
+      $exists = ($exists && file_exists(DRUPAL_ROOT . '/' . $library_path . '/' . $filename));
     }
   }
-  return $library_path;
+  return $exists;
 }
