@@ -1,5 +1,10 @@
 
-PHPMailer 6.x-3.x, xxxx-xx-xx
+PHPMailer 7.x-3.x, xxxx-xx-xx
+-----------------------------
+#811774 by sun, elliotttf: Ported to Drupal 7.
+
+
+PHPMailer 6.x-3.1, 2011-06-05
 -----------------------------
 by sun: Fixed PHP E_STRICT warnings.
 by smk-ka: Added a note to the README how to configure other popular
